scene/windowitem: emit Window::damaged when subsurfaces get removed too

Otherwise we miss some necessary repaints in offscreen effects.

BUG: 508999